--- a/for of.html
+++ b/for of.html
@@ -22,7 +22,33 @@
             }
         }
             document.write(mx)
-            */
+            
+
+        a= [55,99,10,0,1,3,101,2,5,8]
+        for(i=0;i<a.length; i++){
+            for(j=0;j<a.length; j++){
+                if(a[i]<a[j]){
+                    t=a[i]
+                    a[i]=a[j]
+                    a[j]=t
+                }
+            }
+        } document.write(a[a.length-1]+ '<br>')
+        document.write(a[a.length-2]), '<br>'
+        */
+        a= [55,99,10,0,1,3,101,2,5,8,99,8,55]
+        count=0
+        for(i=0;i<a.length; i++){
+        for (j=i+1;j<a.length; j++){
+            if (a[i]== a[j]) {
+                count+=1
+
+            }
+        }
+
+        } 
+        document.write('duplicate values are ', count)
+
     </script>
 </body>
 </html>
